--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "firebase": "^7.22.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-uuid": "^1.0.2",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
