--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "firebase": "^7.22.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
     "react-uuid": "^1.0.2",
     "uuid": "^8.3.1"
   },
