small style changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://yoramhernalsteen.github.io/FireNote",
-  "name": "FireNote",
+  "name": "firenote",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
