--- a/.github/workflows/ci-deploy.yaml
+++ b/.github/workflows/ci-deploy.yaml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v1.1.0
         with:
           version: 12.x
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
       - name: npm install all dependencies
         run:
